# overnotes

./: Cargo.toml  Dioxus.toml  README.md  index.html  script.js
.github/workflows/: rust.yml
assets/: style.css
scripts/: caprect.ps1  capwin.ps1  cdp.py  clipimg.ps1  hittest.ps1  input.ps1  movewin.ps1  overlaytest.ps1  probe.ps1  showwin.ps1  winpid.ps1  winrect.ps1  winstyle.ps1
src/: main.rs
src/editor/: canvas.rs  chrome.rs  mod.rs  objects.rs
src/platform/: capture.rs  game_input.rs  mod.rs  overlay_style.rs  process.rs  tracker.rs
src/store/: mod.rs
src/ui/: launcher.rs  mod.rs  overlay.rs  standalone.rs
website/: style.css
