[package]
name = "overnotes"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
dioxus = { version = "0.7.9", features = ["desktop"] }
directories = "6.0.0"
global-hotkey = "0.7.0"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
softbuffer = "0.4.8"
tokio = { version = "1.52.3", features = ["rt", "time", "sync"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "Win32_System_Threading", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi"] }
windows-capture = "2.0.0"
winit = "0.30.13"
